<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="361dp"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <!-- Add the "home" button here -->

        <!--text view for our course name-->
        <Button
            android:id="@+id/goHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/home" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:id="@+id/food1View"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:padding="3dp"
            android:text="@string/food1"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <TextView
            android:id="@+id/food2View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/food2"
            android:textColor="@color/black" />

        <!--text view for our course description-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/food3View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/food3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/hotelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/hotel"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.cardview.widget.CardView>